[package]
name = "spdp_sys"
version = "0.1.0"
edition = "2021"

links = "spdp"
build = "build.rs"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "SPDP codec bindings"
include = ["src/**/*", "include/*", "Cargo.toml", "build.rs", "README.md"]
license-file = "LICENSE"
repository = "https://github.com/mwlon/spdp-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0" }
pkg-config = "0.3"
